syntax = "proto3";

package flowcraft_proto.v1;

/**
 * AI 提示词生成动作的参数
 */
message PromptGenParams {
  string prompt = 1;
  string negative_prompt = 2;
  int32 steps = 3;
  float cfg_scale = 4;
}

/**
 * 基于选中节点上下文生成内容的参数
 */
message NodeTransformParams {
  string instruction = 1;
  string style = 2;
}

/**
 * 图片增强参数
 */
message ImageEnhanceParams {
  float strength = 1;
  string model_name = 2;
}
